# Learn-Rust-2

./: Cargo.toml  ReadMe.md
src/: 3-scopeAndShadow.rs  4-dataType.rs  5-statementsAndExpressions.rs  garden.rs  main.rs  traitScope.rs
src/Enum/: deref.rs  enum.rs  if-let.rs  practice.rs
src/GuessingGame/: game.rs
src/Project1/: LibraryManagemnt.rs
src/ReferenceBorrowing/: reference.rs
src/Slice/: slice.rs
src/Struct/: struct.rs  structExcersice.rs
src/garden/: vegetables.rs
src/ownership/: stackHeap.rs
