[package]
name = "Learn-Rust-2"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"

[[bin]]
name = "guess"
path = "./src/GuessingGame/game.rs"

[[bin]]
name = "traitScope"
path = "./src/traitScope.rs"

[[bin]]
name = "shadow"
path = "./src/3-scopeAndShadow.rs"

[[bin]]
name = "dt"
path = "./src/4-dataType.rs"

[[bin]]
name = "se"
path = "src/5-statementsAndExpressions.rs"

[[bin]]
name = "owner"
path = "src/ownership/stackHeap.rs"